--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 vendor/
 node_modules/
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
 # Laravel 5 & Lumen specific
 bootstrap/cache/
 storage/
@@ -12,7 +8,12 @@ storage/
 .env.php
 .env
 .env.example
-uploads
-local/_ide_helper.php
-local/composer.lock
+
 local/app/config/database.php
+/local/vendor
+uploads
+/.idea
+composer.lock
+_ide_helper.php
+local/composer.lock
+local/app/storage
